--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -136,6 +136,10 @@
                         <img src="{{ url_for('static', filename='images/tech/Bash_Logo.png') }}" alt="Bash Logo" class="tech-icon">
                         <span class="tech-link-text">Bash</span>
                     </a>
+                     <a href="#" class="tech-link" data-target="automation" title="Automation tools">
+                        <img src="{{ url_for('static', filename='images/tech/automation.png') }}" alt="Automation Logo" class="tech-icon">
+                        <span class="tech-link-text">Automation</span>
+                    </a>
                 </div>
             </div>
             
@@ -193,6 +197,7 @@
             <div id="kibana" class="tech-content-panel" style="display: none;">{% include 'snippets/Kibana.html' %}</div> #}
             <div id="python" class="tech-content-panel" style="display: none;">{% include 'snippets/python.html' %}</div>
             <div id="bash" class="tech-content-panel" style="display: none;">{% include 'snippets/bash.html' %}</div>
+            <div id="automation" class="tech-content-panel" style="display: none;">{% include 'snippets/automation.html' %}</div>
             <div id="postgresql" class="tech-content-panel" style="display: none;">{% include 'snippets/PostgreSQL.html' %}</div>
             <div id="mysql" class="tech-content-panel" style="display: none;">{% include 'snippets/MySQL.html' %}</div>
             <div id="nginx" class="tech-content-panel" style="display: none;">{% include 'snippets/Nginx.html' %}</div>
