Fixed a couple of errors in the previous change

--- a/app/templates/snippets/GitHubActions.html
+++ b/app/templates/snippets/GitHubActions.html
@@ -1,3 +1,5 @@
+<h3>GitHubA Actions CI</h3>
+
 <div class="snippet-intro">
     <p>
         A modern, fully-managed CI/CD platform integrated directly into GitHub. This workflow automates building a Docker image, running tests, pushing it to Amazon ECR, and then updating a Kubernetes manifest repository with the new image tag. The process is triggered by a push to the main branch.
