--- a/app/templates/snippets/Jenkins.html
+++ b/app/templates/snippets/Jenkins.html
@@ -1,3 +1,5 @@
+<h3>Jenkinsfile</h3>
+
 <div class="snippet-intro">
     <p>
         The most commonly used, powerful, declarative CI tool, an open-source automation server with a massive plugin ecosystem, perfect for building, deploying, and automating any CI/CD pipeline. I am using the following stages to make sure that I build a resilient and secure image, that will be versioned and pushed to my Artifact storage.
