--- a/app/templates/snippets/automation.html
+++ b/app/templates/snippets/automation.html
@@ -1,4 +1,4 @@
-<h3 style="color: #ECDFCC;">Automation Scripts<i class="fas fa-terminal" style="font-size: 1.2rem; margin-left: 10px; opacity: 0.7;"></i></h3>
+<h3 style="color: #ECDFCC;">Automation Scripts</h3>
 
 <div class="snippet-intro">
     <p>
