--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -67,6 +67,21 @@
             </div>
         </div>
 
+        <div class="project-card">
+            <h2>Blue-Green Deployment</h2>
+            <p>A demonstration of Blue-Green deployment using Terraform and AWS. Nginx redirects traffic to the green server and has the blue server as a backup server in case the green one fails.</p>
+            <div class="project-links">
+                <a href="https://github.com/liormilliger/Blue-Green-Demo.git" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-github"></i> View on GitHub
+                </a>
+            </div>
+        </div>
+
+        <div class="project-card">
+            <h2>Kafka</h2>
+            <p>Work in progress. More details coming soon!</p>
+        </div>
+
     </div>
 </div>
 {% endblock %}
