--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -49,7 +49,7 @@
 
         <div class="project-card">
             <h2>Kafka Data Shipping</h2>
-            <p>Kafka data shipping microservices architecture, using Java producer-consumer services to stream data between MySQL and Kafka. Deployed on AWS::EKS using Terraform IaC. The CICD process was automated with GitHub Actions to build and push container images to ECR/p>
+            <p>Kafka data shipping microservices architecture, using Java producer-consumer services to stream data between MySQL and Kafka. Deployed on AWS::EKS using Terraform IaC, CICD process was automated with GitHub Actions to build and push container images to ECR.</p>
             <div class="project-links">
                 <a href="https://github.com/liormilliger/kafka-data-shipper.git" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> View on GitHub
