--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -13,7 +13,7 @@
 
         .bg-container {
             /* The image used */
-            background-image: url('/app/static/files/blackcat-pipelines.jpg');
+            background-image: url('/blackcat-pipelines.jpg');
 
             /* Center and scale the image nicely */
             background-position: center;
