Changed nginx error handling and welcome page text

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,45 @@
         
     <div class="about-text">
         <p>
-            My journey into DevOps started with a simple realization: computers never forget what you tell them to do,<br>
+            <h4> As a transformed professional improvising musician,<br>
+                I am well practiced with learning new languages and approaches.<br>
+                Structures are fluid, theory is translated to hands-on performance, compositions, orchestrations -<br>
+                all well harmonized to serve music at its best.<br>
+                <br>
+                I do DevOps now, and I find my abilities as a musician take place and ownership in the tech world.<br>
+                I like to challenge myself with new technologies, structures and tasks that push my limits further,<br>
+                exploring new territories.<br>
+                <br>
+                My experience as a musical education project manager has given me skills to plan, lead and execute<br>
+                large scale projects end to end, working with amazing pros together to deliver in a fast-paced,<br>
+                changing demands time framework.<br>
+            </h4>
+
+            <h4>From architecting Kubernetes clusters to implementing IaC with Terraform and Terragrunt,<br>
+                I build systems that are resilient and scalable.<br>
+                <br>
+                I design and optimize CI/CD pipelines—utilizing tools like Jenkins, GHA and ArgoCD<br>
+                to ensure the journey from commit to production is seamless.<br>
+                <br>
+                My technical curiosity extends into building custom tools in Go and Python<br>
+                backed by CCNA-level networking knowledge.<br>
+                <br>
+                I leverage AI and agentic workflows to automate complex DevOps tasks,<br>
+                pushing the boundaries of progress and moving infrastructure management<br>
+                into the next generation of efficiency.<br>
+                <br>
+                With strong interpersonal abilities and communication,<br>
+                I facilitate better collaboration between different teams to remove friction<br>
+                and align goals to get things done.<br>
+                <br>
+                Much like with musical improvisation, I am comfortable pivoting in high-pressure environments<br>
+                and adapting to shifting project requirements.<br>
+                <br>
+                I take full responsibility for the project lifecycle, managing complex tasks<br>
+                with a focus on accountability and high-quality results.<br>
+            </h4>
+
+            <!--My journey into DevOps started with a simple realization: computers never forget what you tell them to do,<br>
             they just do it exactly as you said (which, as it turns out, isn’t always what you meant).<br>
             That curiosity for how systems behave, and occasionally misbehave, led me to what I do today:<br>
             building scalable, reliable, and secure infrastructure that behaves exactly as intended.<br>
@@ -22,7 +60,7 @@
             designing systems that make both developers and operations teams sleep better at night (most nights, anyway).<br>
             I believe great DevOps isn’t just about automation, it’s about understanding how people and systems interact,<br>
             and removing friction between the two.
-            <!-- <br><br>
+            <br><br>
             This website is more than a digital résumé.<br>
             It’s a living example of how I approach infrastructure - modular, observable, and a little bit fun.<br>
             If you visit the Tech Stack page, you’ll find a breakdown of the tools and platforms running behind the scenes here.<br>
@@ -30,6 +68,7 @@
             When I’m not tuning deployments or chasing down elusive latency spikes, you’ll usually find me<br>
             experimenting with new technologies or automating something that probably didn’t need automating<br>
             (but now runs perfectly every time). -->
+        </p>
     </div>
 </div>
 {% endblock %}
